--- a/admin/src/pages/new/new.scss
+++ b/admin/src/pages/new/new.scss
@@ -32,12 +32,13 @@
 
             .right {
                 flex: 2;
+                padding: 10px 20px;
 
                 form {
                     display: flex;
                     flex-wrap: wrap;
                     gap: 30px;
-                    justify-content: space-around;
+                    justify-content: space-between;
 
                     .formInput {
                         width: 40%;
